@@ -20,6 +20,7 @@
 
 #include "wx/html/forcelnk.h"
 #include "wx/html/m_templ.h"
+#include "wx/html/styleparams.h"
 
 
 FORCE_LINK_ME(m_links)
@@ -70,23 +71,48 @@ TAG_HANDLER_BEGIN(A, "A")
         {
             wxHtmlLinkInfo oldlnk = m_WParser->GetLink();
             wxColour oldclr = m_WParser->GetActualColor();
+            wxColour oldbackclr = m_WParser->GetActualBackgroundColor();
+            int oldbackmode = m_WParser->GetActualBackgroundMode();
+            int oldsize = m_WParser->GetFontSize();
+            int oldbold = m_WParser->GetFontBold();
+            int olditalic = m_WParser->GetFontItalic();
             int oldund = m_WParser->GetFontUnderlined();
+            wxString oldfontface = m_WParser->GetFontFace();
             wxString name(tag.GetParam( wxT("HREF") )), target;
 
             if (tag.HasParam( wxT("TARGET") )) target = tag.GetParam( wxT("TARGET") );
+
+            // set default styles, might get overridden by ApplyStyle
             m_WParser->SetActualColor(m_WParser->GetLinkColor());
             m_WParser->GetContainer()->InsertCell(new wxHtmlColourCell(m_WParser->GetLinkColor()));
             m_WParser->SetFontUnderlined(true);
             m_WParser->GetContainer()->InsertCell(new wxHtmlFontCell(m_WParser->CreateCurrentFont()));
             m_WParser->SetLink(wxHtmlLinkInfo(name, target));
 
+            // Load any style parameters
+            wxHtmlStyleParams styleParams(tag);
+            ApplyStyle(styleParams);
+
             ParseInner(tag);
 
             m_WParser->SetLink(oldlnk);
+            m_WParser->SetFontSize(oldsize);
+            m_WParser->SetFontBold(oldbold);
+            m_WParser->SetFontFace(oldfontface);
+            m_WParser->SetFontItalic(olditalic);
             m_WParser->SetFontUnderlined(oldund);
             m_WParser->GetContainer()->InsertCell(new wxHtmlFontCell(m_WParser->CreateCurrentFont()));
             m_WParser->SetActualColor(oldclr);
             m_WParser->GetContainer()->InsertCell(new wxHtmlColourCell(oldclr));
+
+            if (oldbackmode != m_WParser->GetActualBackgroundMode() ||
+                oldbackclr != m_WParser->GetActualBackgroundColor())
+            {
+               m_WParser->SetActualBackgroundMode(oldbackmode);
+               m_WParser->SetActualBackgroundColor(oldbackclr);
+               m_WParser->GetContainer()->InsertCell(
+                   new wxHtmlColourCell(oldbackclr, oldbackmode == wxTRANSPARENT ? wxHTML_CLR_TRANSPARENT_BACKGROUND : wxHTML_CLR_BACKGROUND));
+            }
 
             return true;
         }
